fix: rewrite menu on mobiles

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -37,6 +37,8 @@
     }
     @media (max-width: 480px) {
         margin: 0;
+        display: block;
+        width: 100%;
         border-bottom: 1px solid rgba(0, 0, 0, 0.5);
     }
     &:hover {
@@ -62,33 +64,73 @@
 
 .nav__menu {
     position: relative;
+    z-index: 3;
+    background-color: rgba(0, 0, 0, 0);
+    width: 22px;
+    height: 22px;
     margin: 0 40px 0 10px;
 }
 
 .nav__menu_checkbox {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: 0;
     opacity: 0;
     position: absolute;
+    z-index: 3;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .nav__manu_elems {
     position: absolute;
-    left: -10px;
+    left: -50%;
     top: 100%;
     z-index: 2;
     max-height: 0;
     height: fit-content;
     overflow: hidden;
-    transition: max-height 1.2s ease;
+    transition: max-height 0.7s ease;
 }
 
-.nav__menu_title {
-    transition: color 1.2s ease;
+.nav__menu_title,
+.nav__menu_title::before,
+.nav__menu_title::after {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: 0.7s;
+}
+
+.nav__menu_title::before {
+    content: '';
+    top: -8px;
+}
+.nav__menu_title::after {
+    content: '';
+    top: 8px;
 }
 
 .nav__menu_checkbox:checked + .nav__menu_title {
-    color: blue;
+    transform: rotate(45deg);
+}
+
+.nav__menu_checkbox:checked + .nav__menu_title::before {
+    top: 0;
+    transform: rotate(0deg);
+}
+
+.nav__menu_checkbox:checked + .nav__menu_title::after {
+    top: 0;
+    transform: rotate(90deg);
 }
 
 .nav__menu_checkbox:checked ~ .nav__manu_elems {
-    max-height: 75px;
+    max-height: 85px;
 }
